crates/biome_module_graph/tests/snapshots/test_infer_call_expression_type_selects_callable_object_overload_by_arity.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export type Reader = {
	(): string;
	(value: number): number;
};
```

## Inferred types

```
Binding Reader "Reader" => Object {
  prototype: No prototype
  members: [
    ():
      sync Function {
        accepts: {
          params: []
          type_args: []
        }
        returns: string
      }
    ,
    ():
      sync Function {
        accepts: {
          params: [
            required value: number
          ]
          type_args: []
        }
        returns: number
      }
  ]
}

Binding value "value" => number
```
