crates/biome_module_graph/tests/snapshots/test_infer_call_expression_type_substitutes_chained_generic_defaults.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export declare function fallback<T = string, U = T>(): U;
```

## Inferred types

```
Binding fallback "fallback" => sync Function "fallback" {
  accepts: {
    params: []
    type_args: [T = string, U = instanceof T]
  }
  returns: instanceof U
}

Binding T "T" => T = string

Binding U "U" => U = instanceof T
```
