crates/biome_module_graph/tests/snapshots/test_infer_call_expression_type_substitutes_generic_from_callback_promise_return_type.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export function unwrap<T>(cb: () => Promise<T>): T {
	return undefined as T;
}

export function readNumber(): Promise<number> {
	return Promise.resolve(1);
}
```

## Inferred types

```
Binding unwrap "unwrap" => sync Function "unwrap" {
  accepts: {
    params: [
      required cb: sync Function {
        accepts: {
          params: []
          type_args: []
        }
        returns: instanceof Promise<instanceof T>
      }
    ]
    type_args: [T]
  }
  returns: instanceof T
}

Binding T "T" => T

Binding cb "cb" => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: instanceof Promise<instanceof T>
}

Expression "undefined" => undefined

Expression "undefined as T" => instanceof T

Binding readNumber "readNumber" => sync Function "readNumber" {
  accepts: {
    params: []
    type_args: []
  }
  returns: instanceof Promise<number>
}

Expression "Promise" => class "Promise" {
  extends: none
  implements: []
  type_args: [T]
}

Expression "Promise.resolve" => sync Function "resolve" {
  accepts: {
    params: [
      required value: TResolveValue
    ]
    type_args: [TResolveValue]
  }
  returns: instanceof Promise<TResolveValue>
}

Expression "Promise.resolve(1)" => instanceof Promise<number: 1>

Expression "1" => number: 1
```
