crates/biome_module_graph/tests/snapshots/test_infer_call_expression_type_substitutes_generic_inside_promise_union_return_type.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export function boxed<T>(value: T): Promise<T | number> {
	return Promise.resolve(value as T | number);
}
```

## Inferred types

```
Binding boxed "boxed" => sync Function "boxed" {
  accepts: {
    params: [
      required value: instanceof T
    ]
    type_args: [T]
  }
  returns: instanceof Promise<instanceof T | number>
}

Binding T "T" => T

Binding value "value" => instanceof T

Expression "Promise" => class "Promise" {
  extends: none
  implements: []
  type_args: [T]
}

Expression "Promise.resolve" => sync Function "resolve" {
  accepts: {
    params: [
      required value: TResolveValue
    ]
    type_args: [TResolveValue]
  }
  returns: instanceof Promise<TResolveValue>
}

Expression "Promise.resolve(value as T | number)" => instanceof Promise<instanceof T | number>

Expression "value" => instanceof T

Expression "value as T | number" => instanceof T | number
```
