crates/biome_module_graph/tests/snapshots/test_infer_call_expression_type_substitutes_generic_inside_union_with_promise_return_type.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export function maybePromise<T>(value: T): T | Promise<T> {
	return value;
}
```

## Inferred types

```
Binding maybePromise "maybePromise" => sync Function "maybePromise" {
  accepts: {
    params: [
      required value: instanceof T
    ]
    type_args: [T]
  }
  returns: instanceof T | instanceof Promise<instanceof T>
}

Binding T "T" => T

Binding value "value" => instanceof T

Expression "value" => instanceof T
```
